@@ -3,6 +3,7 @@
 
 * v1.1.0 (unreleased)
   - New drop indicator style type: Segmented Indicators
+  - Windows: Drop Shadow for floating windows
   - Added AutoHide / SideBar support
   - Added FocusScope support
   - Added DockWidget::isFocused() and DockWidgetBase::isFocusedChanged()
